# route-controller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: 01_basic_routing.rs  02_path_params.rs  03_query_params.rs  04_json_body.rs  05_form_data.rs  06_text_body.rs  07_bytes.rs  08_headers.rs  09_cookies.rs  10_sessions.rs  11_state.rs  12_response_headers.rs  13_middleware.rs  14_mixed_extractors.rs  15_multiple_controllers.rs  auto_controller.rs  basic.rs  body_extractors.rs  comparison.rs  extractors.rs  form_support.rs  middleware.rs  response_headers.rs  session.rs  state.rs
src/: controller.rs  generator.rs  lib.rs  logger.rs  parser.rs
src/generator/: middleware.rs  mod.rs  router.rs  wrappers.rs
src/parser/: config.rs  extractor_types.rs  mod.rs  params.rs  route.rs
tests/: 01_basic_routing.rs  02_path_params.rs  03_query_params.rs  04_json_body.rs  05_form_data.rs  06_text_body.rs  07_bytes.rs  08_headers.rs  09_cookies.rs  10_sessions.rs  11_state.rs  12_middleware.rs  13_response_headers.rs  14_mixed_extractors.rs  15_edge_cases.rs  16_error_validation.rs  17_feature_validation.rs  18_edge_cases_validation.rs  basic_routes.rs  bytes_extractor.rs  cookie_extractor.rs  edge_cases.rs  extractors.rs  form_extractor.rs  header_extractor.rs  middleware.rs  response_headers.rs  route_prefix.rs  session_extractor.rs  state.rs  text_extractors.rs
