[package]
name = "route_controller"
version = "0.2.0"
edition = "2024"
authors = ["Athish Venkatesh <athishaves@gmail.com>"]
description = "A procedural macro for generating Axum routers from controller-style implementations with support for route prefixing and middleware"
license = "MIT"
repository = "https://github.com/athishaves/route_controller"
homepage = "https://github.com/athishaves/route_controller"
documentation = "https://docs.rs/route_controller"
keywords = ["axum", "router", "controller", "macro", "web"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
rust-version = "1.85"

[lib]
proc-macro = true

[features]
default = []
headers = []
cookies = []
sessions = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12", features = ["cookie"] }
tower-sessions = "0.14"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
